# zwartlab-viewer

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/zwartlab_viewer/: _1d_widget.py  __init__.py  _caiman_widget.py  _decomposition_widget.py  _ephys.py  _imaging_widget.py  _preprocess_widget.py  _reader.py  _registration_widget.py  _stimulus_widget.py  _utils.py  _widget.py  ephys_widget.py  napari.yaml
src/zwartlab_viewer/_tests/: test_widget.py
